feat: add account privacy operations
